src/bao_init/openbaoui-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: mkcert-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /
    spec.ingressClassName: nginx
    #traefik.ingress.kubernetes.io/router.middlewares: example-redirect-https@kubernetescrd
    #cert-manager.io/cluster-issuer: letsencrypt-production
    #spec.ingressClassName: traefik
  labels:
    app.kubernetes.io/instance: openbao-ui
  name: openbao-ui
  namespace: ${THIS_NAMESPACE}
spec:
  ingressClassName: nginx
  #ingressClassName: traefik
  rules:
  - host: baoui.${THIS_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: openbao-ui
            port:
              number: 8200
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - baoui.${THIS_DOMAIN}
    secretName: chart-${THIS_NAMESPACE}-baoui-tls
